# PlumberPass

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONSOLIDATE_USEFUL_WORK.py  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_MILESTONES.md  LAUNCH_RUNBOOK.md  LICENSE  Makefile  PLUMBERPASS_ELEVATION_RESEARCH_2026-03-24.md  PRD.md  PROJECT_STATUS.md  PROMPT_NOTEBOOKLM.md  README.md  SOURCE_OF_TRUTH.md  V1_SCOPE.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  start_sector.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
archive/: CONTENT_INJECTION_legacy.md  REPOSITORY_IMPROVEMENTS_2026-02-18.md  UPDATE_README_2026-02-18.md
archive/tools/: CAREFUL_EXTRACTOR.py
backend/: .dockerignore  Dockerfile  run.sh
backend/app/: billing.py  main.py  models.py  storage.py
backend/data/: ALL_VERIFIED_QUESTIONS.json  VERIFIED_QUESTION_BANK.json  advance_week1.json  master_question_bank.json  merge_questions.py  mock_exam1_part_a.json  mock_exam1_part_b.json  notebooklm_batch1.json  notebooklm_batch2.json  notebooklm_batch3.json  notebooklm_batch4.json  questions_advance_week1_verified.json  reference_materials_generated.json  reference_materials_ocr_queue.json  seed.json  temp_week1.json
backend/data/published/: accessibility_law_curated.json  (+14 more)
docs/: API.md  ARCHITECTURE.md  BILLING_STATE.md  CONTENT_TRUTH_MAP.md  DEPLOYMENT.md  DEVELOPMENT.md  LIVE_DEBUG.md  REAL_DEVICE_QA.md  RELEASE_BUILD_STATE.md  RELEASE_GAPS.md
docs/reference/: PROMPT_NOTEBOOKLM.md  scribe_content_spec.md
docs/research/: ANDROID_UI_RESEARCH_2026-03-23.md  MASTER_PLUMBER_WEB_RESEARCH_2026-03-21.md
docs/status/: CONSOLIDATION_SUMMARY_2026-03-24.md  MATERIALS_CONVERSION_SUMMARY.md  REAL_DEVICE_TEST_LOG.md
frontend/: Dockerfile  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: README-PWA.md  index.html  manifest.json  study-bundle.json  sw.js
frontend/src/: App.tsx  main.tsx
scripts/: build_android_beta.ps1  build_android_live_debug.ps1  capture_mobile_gallery.ps1  capture_mobile_preview.ps1  convert_materials.py  convert_reference_materials.py  export_study_bundle.py  generate_visual_review_items.py  import_questions.py  install_android_beta.ps1  launch_smoke.ps1  preview_mobile.ps1  publish_astm_mcqs.py  publish_conversion_mcqs.py  publish_curated_mcqs.py  publish_derived_mcqs.py  publish_laws_mcqs.py  publish_review_slice.py  publish_structured_reference_mcqs.py  publish_visual_review_items.py  setup.py  start_live_debug.ps1
scripts/content_pipeline/: __init__.py  catalog.py  fact_source_converter.py  mcq_source_converter.py  pdf_text.py
tests/backend/: test_api.py  test_billing.py  test_srs.py  test_storage.py
tests/frontend/: test_audio.js
tools/: VERIFICATION_SYSTEM.md  manual_processor.py
(+92 files in other folders)
